generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum DocumentType {
  CPF
  CNPJ
}

enum ClientStatus {
  ATIVO
  INATIVO
  BLOQUEADO
}

enum OSStatus {
  RECEBIDA
  EM_DIAGNOSTICO
  AGUARDANDO_APROVACAO
  EM_EXECUCAO
  FINALIZADA
  ENTREGUE
}

model Admin {
  id           String   @id @default(uuid())
  name         String
  email        String   @unique
  passwordHash String   @map("password_hash")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  @@map("admins")
}

model Client {
  id            String         @id @default(uuid())
  name          String
  document      String         @unique
  documentType  DocumentType   @map("document_type")
  status        ClientStatus   @default(ATIVO)
  phone         String
  email         String?
  address       String?
  deletedAt     DateTime?      @map("deleted_at")
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")
  vehicles      Vehicle[]
  serviceOrders ServiceOrder[]

  @@map("clients")
}

model Vehicle {
  id            String         @id @default(uuid())
  licensePlate  String         @unique @map("license_plate")
  brand         String
  model         String
  year          Int
  color         String?
  clientId      String         @map("client_id")
  client        Client         @relation(fields: [clientId], references: [id])
  serviceOrders ServiceOrder[]
  deletedAt     DateTime?      @map("deleted_at")
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")

  @@index([clientId])
  @@map("vehicles")
}

model Service {
  id               String             @id @default(uuid())
  name             String
  description      String?
  basePrice        Decimal            @map("base_price") @db.Decimal(10, 2)
  estimatedMinutes Int                @map("estimated_minutes")
  isActive         Boolean            @default(true) @map("is_active")
  createdAt        DateTime           @default(now()) @map("created_at")
  updatedAt        DateTime           @updatedAt @map("updated_at")
  orderItems       ServiceOrderItem[]

  @@map("services")
}

model Part {
  id            String             @id @default(uuid())
  name          String
  description   String?
  unitPrice     Decimal            @map("unit_price") @db.Decimal(10, 2)
  stockQuantity Int                @default(0) @map("stock_quantity")
  minStock      Int                @default(0) @map("min_stock")
  unit          String             @default("un")
  isActive      Boolean            @default(true) @map("is_active")
  createdAt     DateTime           @default(now()) @map("created_at")
  updatedAt     DateTime           @updatedAt @map("updated_at")
  orderParts    ServiceOrderPart[]

  @@map("parts")
}

model ServiceOrder {
  id                 String             @id @default(uuid())
  orderNumber        String             @unique @map("order_number")
  status             OSStatus           @default(RECEBIDA)
  clientId           String             @map("client_id")
  client             Client             @relation(fields: [clientId], references: [id])
  vehicleId          String             @map("vehicle_id")
  vehicle            Vehicle            @relation(fields: [vehicleId], references: [id])
  problemDescription String?            @map("problem_description")
  diagnosis          String?
  quoteTotalAmount   Decimal?           @map("quote_total_amount") @db.Decimal(10, 2)
  quoteApprovedAt    DateTime?          @map("quote_approved_at")
  quoteRejectedAt    DateTime?          @map("quote_rejected_at")
  startedAt          DateTime?          @map("started_at")
  completedAt        DateTime?          @map("completed_at")
  deliveredAt        DateTime?          @map("delivered_at")
  technicianNotes    String?            @map("technician_notes")
  createdAt          DateTime           @default(now()) @map("created_at")
  updatedAt          DateTime           @updatedAt @map("updated_at")
  items              ServiceOrderItem[]
  parts              ServiceOrderPart[]
  statusHistory      OSStatusHistory[]

  @@index([clientId])
  @@index([vehicleId])
  // active-order listing filters by status; daily volume dashboard groups by createdAt
  @@index([status])
  @@index([createdAt])
  @@map("service_orders")
}

model ServiceOrderItem {
  id             String       @id @default(uuid())
  serviceOrderId String       @map("service_order_id")
  serviceOrder   ServiceOrder @relation(fields: [serviceOrderId], references: [id])
  serviceId      String       @map("service_id")
  service        Service      @relation(fields: [serviceId], references: [id])
  quantity       Int          @default(1)
  unitPrice      Decimal      @map("unit_price") @db.Decimal(10, 2)
  createdAt      DateTime     @default(now()) @map("created_at")

  @@index([serviceOrderId])
  @@index([serviceId])
  @@map("service_order_items")
}

model ServiceOrderPart {
  id             String       @id @default(uuid())
  serviceOrderId String       @map("service_order_id")
  serviceOrder   ServiceOrder @relation(fields: [serviceOrderId], references: [id])
  partId         String       @map("part_id")
  part           Part         @relation(fields: [partId], references: [id])
  quantity       Int
  unitPrice      Decimal      @map("unit_price") @db.Decimal(10, 2)
  createdAt      DateTime     @default(now()) @map("created_at")

  @@index([serviceOrderId])
  @@index([partId])
  @@map("service_order_parts")
}

model OSStatusHistory {
  id             String       @id @default(uuid())
  serviceOrderId String       @map("service_order_id")
  serviceOrder   ServiceOrder @relation(fields: [serviceOrderId], references: [id])
  fromStatus     OSStatus?    @map("from_status")
  toStatus       OSStatus     @map("to_status")
  changedAt      DateTime     @default(now()) @map("changed_at")
  changedBy      String?      @map("changed_by")
  notes          String?

  // time spent in each status (dashboard) walks an order's history in changedAt order
  @@index([serviceOrderId, changedAt])
  @@map("os_status_history")
}
