erDiagram
    Admin {
        uuid id PK
        string name
        string email UK
        string passwordHash
        datetime createdAt
        datetime updatedAt
    }

    Client {
        uuid id PK
        string name
        string document UK "CPF ou CNPJ"
        string documentType "CPF|CNPJ"
        string status "ATIVO|INATIVO|BLOQUEADO"
        string phone
        string email
        string address
        datetime deletedAt "soft delete"
        datetime createdAt
        datetime updatedAt
    }

    Vehicle {
        uuid id PK
        uuid clientId FK
        string licensePlate UK
        string brand
        string model
        int year
        string color
        datetime deletedAt "soft delete"
        datetime createdAt
        datetime updatedAt
    }

    Service {
        uuid id PK
        string name
        string description
        decimal basePrice
        int estimatedMinutes
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }

    Part {
        uuid id PK
        string name
        string description
        decimal unitPrice
        int stockQuantity
        int minStock
        string unit
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }

    ServiceOrder {
        uuid id PK
        string orderNumber UK
        uuid clientId FK
        uuid vehicleId FK
        string status "RECEBIDA|EM_DIAGNOSTICO|AGUARDANDO_APROVACAO|EM_EXECUCAO|FINALIZADA|ENTREGUE"
        text problemDescription
        text diagnosis
        decimal quoteTotalAmount
        datetime quoteApprovedAt
        datetime quoteRejectedAt
        datetime startedAt
        datetime completedAt
        datetime deliveredAt
        text technicianNotes
        datetime createdAt
        datetime updatedAt
    }

    ServiceOrderItem {
        uuid id PK
        uuid serviceOrderId FK
        uuid serviceId FK
        int quantity
        decimal unitPrice "snapshot no momento da OS - nome vem de join com Service"
        datetime createdAt
    }

    ServiceOrderPart {
        uuid id PK
        uuid serviceOrderId FK
        uuid partId FK
        int quantity
        decimal unitPrice "snapshot no momento da OS - nome vem de join com Part"
        datetime createdAt
    }

    OSStatusHistory {
        uuid id PK
        uuid serviceOrderId FK
        string fromStatus "nulo na primeira transicao"
        string toStatus
        datetime changedAt
        string changedBy
        text notes
    }

    Client ||--o{ Vehicle : "possui"
    Client ||--o{ ServiceOrder : "solicita"
    Vehicle ||--o{ ServiceOrder : "submetido em"
    ServiceOrder ||--o{ ServiceOrderItem : "contem"
    ServiceOrder ||--o{ ServiceOrderPart : "utiliza"
    ServiceOrder ||--o{ OSStatusHistory : "audita transicoes"
    Service ||--o{ ServiceOrderItem : "referenciado por"
    Part ||--o{ ServiceOrderPart : "referenciado por"
